# glmesh

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  glmesh.md  qt5.natvis
doc/diagrams/: class_relationships.puml  rendering_pipeline.puml  rendering_pipeline_flow.puml  shader_pipeline.puml
res/: resource.qrc
res/qss/: basic.qss  body.qss  control.css  header.qss  main_widget.css  sceneToolbar.qss
source/glmesh/: glm_nsp.h  glmesh_basedef.h  glmesh_nsp.h
source/glmesh/app/: CMakeLists.txt  main.cpp  main_widget.cpp  main_widget.h  mesh_widget.cpp  mesh_widget.h  renderable_object.h
source/glmesh/core/: CMakeLists.txt  actor.cpp  actor.h  bkg_actor.cpp  bkg_actor.h  buffer.cpp  buffer.h  camera.cpp  camera.h  cube.cpp  cube.h  glad.c  glm_base_type.h  glm_bkg_actor.cpp  glm_buffer.cpp  glm_buffer.h  glm_cube.cpp  glm_mesh.h  glm_mesh_actor.cpp  glm_mesh_renderer.cpp  glm_mesh_renderer.h  glm_sphere_actor.cpp  instantiator.h  memory_block.cpp  memory_block.h  mesh_actor.cpp  mesh_actor.h  mesh_poly_data.cpp  mesh_poly_data.h  mesh_renderer.cpp  mesh_renderer.h  misc.cpp  misc.h  shader_program.cpp  shader_program.h  shader_source.h  shader_source.h.in  size_eval.hpp  sphere_actor.cpp  sphere_actor.h  (+10 more)
source/glmesh/kernel/: CMakeLists.txt  cpu_point_cloud.h  cpu_polygon_mesh.h  cpu_to_gpu.cpp  cpu_to_gpu.h  cpu_triangle_mesh.h  cpu_vertex.h  gl_point_cloud.cpp  gl_point_cloud.h  gl_triangle_mesh.cpp  gl_triangle_mesh.h  glad.c  glad.h  glm_kernel_basetype.h  glm_kernel_export.h  glmesh_kernel_export.h  glmesh_kernel_typedef.h  glmesh_log.cpp  glmesh_log.h  gpu_vertex.cpp  gpu_vertex.h  index_buffer.cpp  index_buffer.h  khrplatform.h  material.cpp  material.h  mesh.frag  mesh.vert  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
source/glmesh/kernel/core/: bounds_3d.h  cpu_bkg.h  cpu_bkg_vertex.h  cpu_mesh_conv.cpp  cpu_mesh_conv.h  cpu_point_cloud.h  cpu_polygon_mesh.h  cpu_polyline.h  cpu_rectangle.h  cpu_to_gpu.cpp  cpu_to_gpu.h  cpu_triangle_mesh.cpp  cpu_triangle_mesh.h  cpu_vertex.h  geometry_utils.cpp  geometry_utils.h  mesh_bounds.h
source/glmesh/kernel/gl/: gl_api_init.cpp  gl_api_init.h  gl_bkg.cpp  gl_bkg.h  gl_debug.cpp  gl_debug.h  gl_drawable.h  gl_init.cpp  gl_init.h  gl_point_cloud.cpp  gl_point_cloud.h  gl_polyline.cpp  gl_polyline.h  gl_rect.cpp  gl_rect.h  gl_rectangle.cpp  gl_rectangle.h  gl_trackball_gizmo.cpp  gl_trackball_gizmo.h  gl_triangle_mesh.cpp  gl_triangle_mesh.h  gpu_bkg.h  gpu_bkg_vertex.cpp  gpu_bkg_vertex.h  gpu_polyline.h  gpu_rect.h  gpu_rectangle.h  gpu_triangle_mesh.h  gpu_vertex.cpp  gpu_vertex.h  index_buffer.cpp  index_buffer.h  shader_program.cpp  shader_program.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
source/glmesh/kernel/io/: mesh_loader.cpp  mesh_loader.h
source/glmesh/meshStudio/: CMakeLists.txt  app_log.cpp  app_log.h  main.cpp  main_widget.cpp  main_widget.h  main_widget.ui  mesh_widget.cpp  render_window.h
source/glmesh/mesh_studio/: CMakeLists.txt  app_log.cpp  app_log.h  arcball_rotator.cpp  arcball_rotator.h  color_button.cpp  color_button.h  common.h  main.cpp  main_widget.cpp  main_widget.h  main_widget.ui  material.cpp  material.h  mesh_widget.cpp  mesh_widget.h  mouse_interaction.h  orbit_interaction.cpp  orbit_interaction.h  renderable_object.h  resource_util.cpp  resource_util.h  shader_program_manager.cpp  shader_program_manager.h
source/glmesh/render/: CMakeLists.txt  camera.cpp  camera.h  glmesh_render_export.h  glmesh_render_typedef.h
source/glmesh/test/: CMakeLists.txt  main.cpp  main_window.cpp  mesh_process.cpp  mesh_process.h  ply_reader.cpp  render_window.cpp  render_window.h
source/glmesh/test2/: CMakeLists.txt  main.cpp  mesh_widget.cpp  mesh_widget.h  render_window.cpp  render_window.h
